[gd_scene load_steps=17 format=3 uid="uid://plie65pfbchy"]

[ext_resource type="Script" path="res://level_selection/level_selection.gd" id="1_qccdd"]
[ext_resource type="Texture2D" uid="uid://dnlmp6xj6rn3n" path="res://balanca_jogo/botao/4.png" id="1_u1ig8"]
[ext_resource type="Texture2D" uid="uid://v2kih0ywdnm3" path="res://balanca_jogo/botao/1.png" id="2_2hele"]
[ext_resource type="Script" path="res://level_selection/1.gd" id="3_emmu4"]
[ext_resource type="Texture2D" uid="uid://tba38p5c0iqs" path="res://balanca_jogo/balanca_imagens/L1_5graus_transparente.png" id="3_wnya4"]
[ext_resource type="FontFile" uid="uid://571l1nqrtkih" path="res://balanca_jogo/botao/CelticHand.ttf" id="4_uke2s"]
[ext_resource type="Script" path="res://level_selection/2.gd" id="6_po662"]
[ext_resource type="Texture2D" uid="uid://1b1atd22fc36" path="res://assets/Objects/trunk_closed.png" id="7_gk6qd"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3amjb"]
size = Vector2(390, 169)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hi8b3"]
size = Vector2(391, 164.969)

[sub_resource type="Animation" id="Animation_mx0o0"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("1:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_urtbr"]
resource_name = "new_animation"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("1:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, -0.0872665, 0.0872665]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_rbd3i"]
_data = {
"RESET": SubResource("Animation_mx0o0"),
"new_animation": SubResource("Animation_urtbr")
}

[sub_resource type="Animation" id="Animation_wh0kb"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("2:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_t6cix"]
resource_name = "new_animation"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("2:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, 0.0523599, -0.0523599]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_6yyq4"]
_data = {
"RESET": SubResource("Animation_wh0kb"),
"new_animation": SubResource("Animation_t6cix")
}

[node name="level_selection" type="Node2D"]
script = ExtResource("1_qccdd")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 1166.0
offset_bottom = 671.0
mouse_filter = 1
color = Color(0.176471, 0.258824, 0.211765, 1)

[node name="ColorRect2" type="ColorRect" parent="."]
offset_left = 60.0
offset_right = 130.0
offset_bottom = 650.0
mouse_filter = 1
color = Color(0.376172, 0.513775, 0.434471, 1)

[node name="ColorRect2" type="ColorRect" parent="ColorRect2"]
layout_mode = 0
offset_left = 180.0
offset_right = 250.0
offset_bottom = 650.0
mouse_filter = 1
color = Color(0.376172, 0.513775, 0.434471, 1)

[node name="ColorRect2" type="ColorRect" parent="ColorRect2/ColorRect2"]
layout_mode = 0
offset_left = 180.0
offset_right = 250.0
offset_bottom = 650.0
mouse_filter = 1
color = Color(0.376172, 0.513775, 0.434471, 1)

[node name="ColorRect2" type="ColorRect" parent="ColorRect2/ColorRect2/ColorRect2"]
layout_mode = 0
offset_left = 180.0
offset_right = 250.0
offset_bottom = 650.0
mouse_filter = 1
color = Color(0.376172, 0.513775, 0.434471, 1)

[node name="ColorRect2" type="ColorRect" parent="ColorRect2/ColorRect2/ColorRect2/ColorRect2"]
layout_mode = 0
offset_left = 180.0
offset_right = 250.0
offset_bottom = 650.0
mouse_filter = 1
color = Color(0.376172, 0.513775, 0.434471, 1)

[node name="ColorRect2" type="ColorRect" parent="ColorRect2/ColorRect2/ColorRect2/ColorRect2/ColorRect2"]
layout_mode = 0
offset_left = 180.0
offset_right = 250.0
offset_bottom = 650.0
mouse_filter = 1
color = Color(0.376172, 0.513775, 0.434471, 1)

[node name="ColorRect2" type="ColorRect" parent="ColorRect2/ColorRect2/ColorRect2/ColorRect2/ColorRect2/ColorRect2"]
layout_mode = 0
offset_left = 180.0
offset_right = 250.0
offset_bottom = 650.0
mouse_filter = 1
color = Color(0.376172, 0.513775, 0.434471, 1)

[node name="ColorRect3" type="ColorRect" parent="."]
offset_top = 60.0
offset_right = 1152.0
offset_bottom = 110.0
mouse_filter = 1
color = Color(0.376471, 0.513726, 0.435294, 0.737255)

[node name="ColorRect3" type="ColorRect" parent="ColorRect3"]
layout_mode = 0
offset_top = 180.0
offset_right = 1152.0
offset_bottom = 230.0
mouse_filter = 1
color = Color(0.376471, 0.513726, 0.435294, 0.737255)

[node name="ColorRect3" type="ColorRect" parent="ColorRect3/ColorRect3"]
layout_mode = 0
offset_top = 180.0
offset_right = 1152.0
offset_bottom = 230.0
mouse_filter = 1
color = Color(0.376471, 0.513726, 0.435294, 0.737255)

[node name="ColorRect3" type="ColorRect" parent="ColorRect3/ColorRect3/ColorRect3"]
layout_mode = 0
offset_top = 180.0
offset_right = 1152.0
offset_bottom = 230.0
mouse_filter = 1
color = Color(0.376471, 0.513726, 0.435294, 0.737255)

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(576, 324)
scale = Vector2(0.6, 0.6)

[node name="table" type="Sprite2D" parent="."]
position = Vector2(576, 325)
scale = Vector2(1.1, 1.1)
texture = ExtResource("1_u1ig8")

[node name="1" type="Sprite2D" parent="."]
position = Vector2(379, 227)
texture = ExtResource("2_2hele")
script = ExtResource("3_emmu4")

[node name="L15GrausTransparente" type="Sprite2D" parent="1"]
position = Vector2(111, -15)
scale = Vector2(0.15, 0.15)
texture = ExtResource("3_wnya4")

[node name="Label" type="Label" parent="1"]
offset_left = -162.0
offset_top = -58.0
offset_right = 54.0
offset_bottom = 42.0
focus_mode = 2
mouse_filter = 1
theme_override_colors/font_color = Color(0.337255, 0.337255, 0.337255, 1)
theme_override_font_sizes/font_size = 20
text = "Ajude o feiticeiro com suas compras nesse jogo de balança!"
vertical_alignment = 1
autowrap_mode = 3

[node name="Area2D" type="Area2D" parent="1"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="1/Area2D"]
position = Vector2(1, 1)
rotation = 0.0174533
shape = SubResource("RectangleShape2D_3amjb")

[node name="2" type="Sprite2D" parent="."]
position = Vector2(780, 359)
texture = ExtResource("2_2hele")
script = ExtResource("6_po662")

[node name="TrunkClosed" type="Sprite2D" parent="2"]
position = Vector2(106, 2)
scale = Vector2(0.4, 0.4)
texture = ExtResource("7_gk6qd")

[node name="Label" type="Label" parent="2"]
offset_left = -166.0
offset_top = -58.0
offset_right = 41.0
offset_bottom = 49.0
focus_mode = 2
mouse_filter = 1
theme_override_colors/font_color = Color(0.337255, 0.337255, 0.337255, 1)
theme_override_font_sizes/font_size = 20
text = "Será que você é capaz de abrir o baú e resgatar o tesouro?"
vertical_alignment = 1
autowrap_mode = 2

[node name="Area2D" type="Area2D" parent="2"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="2/Area2D"]
position = Vector2(0.449524, -0.554138)
rotation = 0.0349066
shape = SubResource("RectangleShape2D_hi8b3")

[node name="3" type="Sprite2D" parent="."]
position = Vector2(390, 489)
texture = ExtResource("2_2hele")

[node name="Label" type="Label" parent="."]
offset_top = 30.0
offset_right = 1152.0
offset_bottom = 110.0
focus_mode = 2
mouse_filter = 1
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0.858824, 0.643137, 0.356863, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_uke2s")
theme_override_font_sizes/font_size = 70
text = "Escolha uma fase"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Phase_1" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_rbd3i")
}

[node name="Phase_2" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_6yyq4")
}

[connection signal="input_event" from="1/Area2D" to="1" method="_on_area_2d_input_event"]
[connection signal="mouse_entered" from="1/Area2D" to="1" method="_on_area_2d_mouse_entered"]
[connection signal="mouse_entered" from="1/Area2D" to="1/Area2D" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="1/Area2D" to="1" method="_on_area_2d_mouse_exited"]
[connection signal="mouse_exited" from="1/Area2D" to="1/Area2D" method="_on_mouse_exited"]
[connection signal="mouse_shape_entered" from="1/Area2D" to="1" method="_on_area_2d_mouse_shape_entered"]
[connection signal="input_event" from="2/Area2D" to="2" method="_on_area_2d_input_event"]
[connection signal="mouse_entered" from="2/Area2D" to="2" method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="2/Area2D" to="2" method="_on_area_2d_mouse_exited"]
[connection signal="mouse_shape_entered" from="2/Area2D" to="2" method="_on_area_2d_mouse_shape_entered"]
[connection signal="mouse_shape_exited" from="2/Area2D" to="2" method="_on_area_2d_mouse_shape_exited"]
